src/objects/c2g__codaSelectionCriterion__c.object
<CustomObject>
    <description>Stores the conditions for the selection definitions.</description>
    <fields>
        <fullName>c2g__ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__FieldLabel__c</fullName>
        <label>Field Label</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__FieldType__c</fullName>
        <label>Field Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__Field__c</fullName>
        <label>Field</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__LineNumber__c</fullName>
        <label>Line Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__Operator__c</fullName>
        <label>Operator</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__RelatedFieldLabel__c</fullName>
        <label>Related Field Label</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__Selection__c</fullName>
        <description>FinancialForce XL saved selections</description>
        <label>Selection</label>
        <referenceTo>c2g__codaSelection__c</referenceTo>
        <relationshipLabel>Selection Criteria</relationshipLabel>
        <relationshipName>Restrictions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>c2g__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Header</fullName>
                </value>
                <value>
                    <fullName>Line Item</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__ValueFrom__c</fullName>
        <label>Value From</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__ValueTo__c</fullName>
        <label>Value To</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Selection Criterion</label>
    <nameField>
        <label>Selection Criterion Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Selection Criteria</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>